Update Resume/about me
Added 2 new pics

--- a/main_css/style.css
+++ b/main_css/style.css
@@ -63,3 +63,14 @@
   /*--------------------------------------------------------------
   # Portfolio
   --------------------------------------------------------------*/
+
+
+  /*-----------------------------------------------------------
+  
+  -----------------------------------------------------------*/
+
+  .card-body form input,
+  .card-body form label{
+    color: #aaabb6 !important;
+  }
+
